--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -40,15 +40,16 @@
         <TimePicker
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/timePicker"
+            android:id="@+id/alarmTimePicker"
             android:layout_gravity="center_horizontal" />
 
-        <Button
+        <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add"
-            android:id="@+id/button"
-            android:layout_gravity="center_horizontal" />
+            android:text="New ToggleButton"
+            android:id="@+id/alarmToggle"
+            android:layout_gravity="center_horizontal"
+            android:onClick="onToggleClicked"/>
 
     </LinearLayout>
 </ScrollView>
